can create a new user and sign in, bug fixes and cleaned code

--- a/html/signup.html
+++ b/html/signup.html
@@ -34,12 +34,12 @@
   </div>
   <div class='container' id='signup'>
     <div class="card-panel">
-    <form name="signup">
+    <form action="http://localhost:3000/token" method="post" name="signup" id='signup'>
       <label for="username">Username: </label>
-      <input type="text" name="username" required>
+      <input type="text" name="username" id="username" required>
     
       <label for="email">Email: </label>
-      <input type="email" name="email" required>
+      <input type="email" name="email" id="email" required>
     
       <label for="password">Password: </label>
       <input type="password" name="password" required>
@@ -52,5 +52,3 @@
     </div>
   </div>
 </body>
-
-  
